fix for slideshow and section spacing

--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -335,6 +335,7 @@ footer.row {
   max-width: none !important;
   width: 100% !important;
   padding: 0;
+  float: left;
 }
 
 /* Slideshow and Picture Teasers */
